--- a/uis/mainwindow.ui
+++ b/uis/mainwindow.ui
@@ -218,8 +218,15 @@
     <addaction name="action_organs_info"/>
     <addaction name="action_DICOM"/>
    </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Настройки</string>
+    </property>
+    <addaction name="action_check_cuda"/>
+   </widget>
    <addaction name="main_menu"/>
    <addaction name="view_menu"/>
+   <addaction name="menu"/>
   </widget>
   <action name="action_open_dicom">
    <property name="text">
@@ -262,6 +269,11 @@
   <action name="action_organs_info">
    <property name="text">
     <string>Информация об органах</string>
+   </property>
+  </action>
+  <action name="action_check_cuda">
+   <property name="text">
+    <string>Проверить наличие CUDA и GPU</string>
    </property>
   </action>
  </widget>
